--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopping-app",
-  "homepage": "https://manali2909.github.io/",
+  "homepage": "https://manali2909.github.io/ShoppingApp-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
